# LLM-Sim-Bench

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
configs/: default.json
gui/: app.js  index.html  sim_worker.js  style.css
python/: security.py  sweep.py
python/analysis/: __init__.py  clustering.py
scratch/: reproduce.js  reproduce2.js
src/bindings/: pybind_module.cpp
src/core/: event.hpp  event_queue.hpp  scheduler.hpp  workload.hpp
src/models/: decode_engine.hpp  hardware_profile.hpp  model_architecture.hpp  prefill_engine.hpp  simulation_engine.hpp  timing_model.hpp
tests/: test_des_engine.cpp
